--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
-opencv-python~=4.2.0.34
-numpy~=1.19.0
+click
+enum-compat
+enum34
+eventlet
+Flask
+Flask-SocketIO
+gevent
+gevent-websocket
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+MarkupSafe
+numpy
+olefile
+opencv-python
+Pillow
+python-engineio
+python-socketio
+redis
+six
+Werkzeug
+opencv-contrib-python
 dlib~=19.16.0
 imutils~=0.5.3
 scikit-learn~=0.23.1
-opencv-contrib-python~=4.4.0.42
-pdf2image~=1.14.0
-flask~=1.1.2
