--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,35 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-opencv-python = "~=4.2.0.34"
-numpy = "~=1.19.0"
-dlib = "~=19.16.0"
-imutils = "~=0.5.3"
-scikit-learn = "~=0.23.1"
-opencv-contrib-python = "~=4.4.0.42"
-pdf2image = "~=1.14.0"
-Flask = "~=1.1.2"
+click
+enum-compat
+enum34
+eventlet
+Flask
+Flask-SocketIO
+gevent
+gevent-websocket
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+MarkupSafe
+numpy
+olefile
+opencv-python
+Pillow
+python-engineio
+python-socketio
+redis
+six
+Werkzeug
+opencv-contrib-python
+dlib~=19.16.0
+imutils~=0.5.3
+scikit-learn~=0.23.1
+pybase64
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
