--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click
+dlib
 enum-compat
 enum34
 eventlet
@@ -8,20 +9,19 @@ gevent
 gevent-websocket
 greenlet
 gunicorn
+imutils
 itsdangerous
 Jinja2
 MarkupSafe
 numpy
 olefile
 opencv-python
+opencv-contrib-python
 Pillow
+pybase64
 python-engineio
 python-socketio
 redis
+scikit-learn
 six
 Werkzeug
-opencv-contrib-python
-dlib~=19.16.0
-imutils~=0.5.3
-scikit-learn~=0.23.1
-pybase64
